# os2mo-dar-client

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  mkdocs.yml  mypy.ini  pyproject.toml
.reuse/: dep5
docs/: NEWS.md  index.md
docs/modules/: dar_client.md
os2mo_dar_client/: __init__.py  dar_client.py
tests/: conftest.py  test_healthcheck.py  test_integration_tests.py  test_os2mo_dar_client.py  utils.py
