[tool.poetry]
name = "os2mo-dar-client"
version = "0.1.0"
description = "OS2mo DAR Client is a client for DAWA / DAR"
authors = ["Magenta <info@magenta.dk>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/ra-utils"
keywords = ["os2mo", "lora", "dar", "client"]

[tool.poetry.dependencies]
python = "^3.8"
more-itertools = "^8.8.0"
aiohttp = "^3.7.4"
ra-utils = {path = "../ra-utils", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.5b0"
flake8 = "^3.9.1"
mypy = "^0.812"
reorder-python-imports = "^2.5.0"
pre-commit = "^2.12.1"
parameterized = "^0.8.1"
hypothesis = "^6.13.1"
pytest-cov = "^2.12.1"
mkdocs-material = "^7.2.1"
mkdocstrings = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
